# Operating-system-example

./: README.md
deadlock/: CMakeLists.txt  deadlock_avoidance.cpp  multithread_deadlock.cpp
process/: CMakeLists.txt  new_proc_pid.cpp  pipe.cpp
shared_memory/: CMakeLists.txt  shm_customer.cpp  shm_provider.cpp
synchronization/: CMakeLists.txt  atomic_mutex_compare_example.cpp  atomic_variable_example.cpp  reader_writer_example.cpp
thread/: CMakeLists.txt  create_thread.cpp  multithread_sort.cpp  scheduling_thread.cpp
